# outlaw-message

outlaw-messager1/: .env.example  .gitignore  DEPLOYMENT.md  Procfile  QUICK_DEPLOY.md  README.md  config.py  deploy.sh  main.py  migrate_db.py  pyproject.toml  replit.md  requirements.txt
outlaw-messager1/attached_assets/: Pasted-User-Enrollment-One-Time-Setup-1-Voice-Sample-Upload-Prompt-the-new-user-To-set-up-voice-log-1758542611490_1758542611490.txt
outlaw-messager1/instance/: messenger.db
outlaw-messager1/templates/: base.html  blockchain_verify.html  device_management.html  index.html  login.html  register.html  steganography.html  voice_login.html  voice_register.html  zero_knowledge.html
outlaw-messager1/uploads/: blockchain_records.json
